# basis-schemas

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: action-string.md  adapter-evidence-reference.md  architecture.md  audit-event.md  audit-evidence.md  contract-governance.md  contract-metadata.md  decision-request.md  decision-response.md  evaluation-trace.md  gateway-audit-event.md  identity-evidence-reference.md  migration-plan.md  operation-aware-compatibility-vectors.md  operation-aware-decision-request.md  operation-aware-decision-response.md  operation-aware-schema-readiness.md  policy-bundle.md  policy-condition.md  policy-rule.md  reason-code.md  redaction-classification.md  release-notes.md  resource-identifier.md  trace-rule-evidence.md  vocabulary.md
schemas/: README.md
tests/: test_action_string_contract.py  test_adapter_evidence_reference_contract.py  test_audit_event_contract.py  test_audit_evidence_contract.py  test_contract_metadata_contract.py  test_decision_request_contract.py  test_decision_response_contract.py  test_evaluation_trace_contract.py  test_gateway_audit_event_contract.py  test_identity_evidence_reference_contract.py  test_metadata.py  test_operation_aware_compatibility_vectors.py  test_operation_aware_decision_request_contract.py  test_operation_aware_decision_response_contract.py  test_policy_bundle_contract.py  test_policy_condition_contract.py  test_policy_rule_contract.py  test_reason_code_contract.py  test_redaction_classification_contract.py  test_repository_layout.py  test_vocabulary_contract.py  (+2 more)
(+59 files in other folders)
