[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "basis-schemas"
version = "0.0.0"
description = "Published shared contracts for the BASIS ecosystem (Phase 1 foundation; no contracts migrated yet)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Basis Foundation" }]
keywords = ["basis", "schemas", "contracts", "authorization", "ot"]
dependencies = []

[project.optional-dependencies]
# PyYAML is needed to parse the published YAML contracts in tests. It is a dev
# dependency only: this repository publishes static contract files and carries
# no runtime behavior.
dev = ["pytest>=7", "ruff>=0.4", "mypy>=1.8", "PyYAML>=6"]

[tool.hatch.build.targets.wheel]
packages = ["src/basis_schemas"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
files = ["src"]
strict = true
